# InnovativeArtsInc

./: .dockerignore  .env.example  AGENT.md  AGENT_LOG.md  AUTONOMY.md  DOCS_INDEX.md  Dockerfile  GOVERNANCE.md  MCP_REGISTRY.md  MCP_SERVERS.md  MEMORY.md  README.md  SECURITY.md  TOOLS.md  WORKFLOWS.md  init_engine.sh  pyproject.toml
.github/workflows/: ci.yml
config/: generation_policy.json
core/agents/: __init__.py  action_registry.py  execution_policy.py
pipelines/: autonomous_media_cli.py  ci_quality_gates.py  media_state_machine.md  media_state_machine.py  run_autonomous_media_job.py  test_media_state_machine.py  validate_action_registry.py  validate_agent_log_chain.py  validate_media_outputs.py  write_media_run_summary.py
registry/: dashboard_snapshot.json  metrics.jsonl  version_manifest.json
services/: __init__.py
tests/: test_abort_conformance_matrix.py  test_action_registry.py  test_api_dispatcher.py  test_ar_orchestrator_contract.py  test_audio_analysis.py  test_autonomous_media_cli.py  test_creative_control_plane.py  test_execution_policy.py  test_generation_scheduler.py  test_governance_control_plane.py  test_growth_ops.py  test_ip_agent_hasher.py  test_media_conductor.py  test_media_generation.py  test_media_generation_ip_lifecycle.py  test_media_governance.py  test_ratification.py  test_release_pipeline.py  test_rights_ledger.py  test_run_autonomous_media_job.py  test_validate_media_generation_config.py  test_validate_media_outputs_release_bundle.py  test_validate_media_outputs_remediation.py  test_write_media_run_summary.py
(+73 files in other folders)
